add spinner abd some other stuff

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 
       <div class="stats">
 
-        <div id="confirmed"></div>
+        <div id="confirmed"><img src="Gear.gif" alt="" height="25"></div>
 
-        <div id="recovered"></div>
+        <div id="recovered"><img src="Gear.gif" alt="" height="25"></div>
 
-        <div id="deaths"></div>
+        <div id="deaths"><img src="Gear.gif" alt="" height="25"></div>
 
       </div>
 
     </div>
+
+    <div id="countries"></div>
     <script src="main.js"></script>
   </body>
 </html>
