--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,37 +8,54 @@
     <meta name="viewport" content="width=sc, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
 
     <div class="container">
 
-      <div class="info">
+        <div class="info">
 
-        <div class="title">
+            <div class="title">
 
-          Covid-19 Statistics
+                Covid-19 Statistics
 
-          <div id="date"></div>
+                <input type="date" name="date" id="date" onchange="handleDateChange(event);">
+                <div id="date"></div>
+
+            </div>
+
+            <div id="countryName"></div>
 
         </div>
 
-        <div id="countryName"></div>
+        <div class="stats">
+            <div>
+                <label for="confirmed">Confirmed</label>
+                <div id="confirmed"><img src="Gear.gif" alt="" height="25"></div>
+            </div>
 
-      </div>
+            <div>
+                <label for="recovered">Recovered</label>
+                <div id="recovered"><img src="Gear.gif" alt="" height="25"></div>
+            </div>
 
-      <div class="stats">
+            <div>
+                <label for="deaths">Deaths</label>
+                <div id="deaths"><img src="Gear.gif" alt="" height="25"></div>
+            </div>
 
-        <div id="confirmed"><img src="Gear.gif" alt="" height="25"></div>
 
-        <div id="recovered"><img src="Gear.gif" alt="" height="25"></div>
+        </div>
 
-        <div id="deaths"><img src="Gear.gif" alt="" height="25"></div>
 
-      </div>
-
+    </div>
+    <div id="countryListContainer">
+        <div class="title">List of countries</div>
+        <div id="countryList"></div>
     </div>
 
     <div id="countries"></div>
     <script src="main.js"></script>
-  </body>
+</body>
+
 </html>
